src/main/java/com/example/buesell/errors/strategy/Error404.java
package com.example.buesell.errors.strategy;

import org.springframework.stereotype.Component;

@Component
public class Error404 implements ErrorStrategy {
    @Override
    public String handleError() {
        return "404";
    }
}
